// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NavList > renders a simple list 1`] = `
<div>
  <nav>
    <ul
      class="prc-ActionList-ActionList-X4RiC"
      data-dividers="false"
      data-variant="inset"
    >
      <li
        class="prc-ActionList-ActionListItem-uq6I7"
        data-active="true"
        data-has-description="false"
      >
        <a
          aria-current="page"
          aria-labelledby=":r1:--label  "
          class="prc-ActionList-ActionListContent-sg9-x prc-Link-Link-85e08"
          data-size="medium"
          href="/"
          id=":r1:"
          style="--subitem-depth: 0;"
          tabindex="0"
        >
          <span
            class="prc-ActionList-Spacer-dydlX"
          />
          <span
            class="prc-ActionList-ActionListSubContent-lP9xj"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              class="prc-ActionList-ItemLabel-TmBhn"
              id=":r1:--label"
            >
              Home
            </span>
          </span>
        </a>
      </li>
      <li
        class="prc-ActionList-ActionListItem-uq6I7"
        data-has-description="false"
      >
        <a
          aria-labelledby=":r2:--label  "
          class="prc-ActionList-ActionListContent-sg9-x prc-Link-Link-85e08"
          data-size="medium"
          href="/about"
          id=":r2:"
          style="--subitem-depth: 0;"
          tabindex="0"
        >
          <span
            class="prc-ActionList-Spacer-dydlX"
          />
          <span
            class="prc-ActionList-ActionListSubContent-lP9xj"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              class="prc-ActionList-ItemLabel-TmBhn"
              id=":r2:--label"
            >
              About
            </span>
          </span>
        </a>
      </li>
      <li
        class="prc-ActionList-ActionListItem-uq6I7"
        data-has-description="false"
      >
        <a
          aria-labelledby=":r3:--label  "
          class="prc-ActionList-ActionListContent-sg9-x prc-Link-Link-85e08"
          data-size="medium"
          href="/contact"
          id=":r3:"
          style="--subitem-depth: 0;"
          tabindex="0"
        >
          <span
            class="prc-ActionList-Spacer-dydlX"
          />
          <span
            class="prc-ActionList-ActionListSubContent-lP9xj"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              class="prc-ActionList-ItemLabel-TmBhn"
              id=":r3:--label"
            >
              Contact
            </span>
          </span>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`NavList > renders with groups 1`] = `
<div>
  <nav>
    <ul
      class="prc-ActionList-ActionList-X4RiC"
      data-dividers="false"
      data-variant="inset"
    >
      <li
        aria-hidden="true"
        class="prc-ActionList-Divider-rsZFG"
        data-component="ActionList.Divider"
      />
      <li
        class="prc-ActionList-Group-fXpF9"
      >
        <div
          class="prc-ActionList-GroupHeadingWrap-pfbd9"
          data-component="GroupHeadingWrap"
          data-variant="subtle"
        >
          <h3
            class="prc-ActionList-GroupHeading-eahp0"
            data-component="ActionList.GroupHeading"
            id=":r5:"
          >
            Overview
          </h3>
        </div>
        <ul
          aria-labelledby=":r5:"
          class="prc-ActionList-GroupList-sj8d3"
        >
          <li
            class="prc-ActionList-ActionListItem-uq6I7"
            data-active="true"
            data-has-description="false"
          >
            <a
              aria-current="page"
              aria-labelledby=":r6:--label  "
              class="prc-ActionList-ActionListContent-sg9-x prc-Link-Link-85e08"
              data-size="medium"
              href="/getting-started"
              id=":r6:"
              style="--subitem-depth: 0;"
              tabindex="0"
            >
              <span
                class="prc-ActionList-Spacer-dydlX"
              />
              <span
                class="prc-ActionList-ActionListSubContent-lP9xj"
                data-component="ActionList.Item--DividerContainer"
              >
                <span
                  class="prc-ActionList-ItemLabel-TmBhn"
                  id=":r6:--label"
                >
                  Getting started
                </span>
              </span>
            </a>
          </li>
        </ul>
      </li>
      <li
        aria-hidden="true"
        class="prc-ActionList-Divider-rsZFG"
        data-component="ActionList.Divider"
      />
      <li
        class="prc-ActionList-Group-fXpF9"
      >
        <div
          class="prc-ActionList-GroupHeadingWrap-pfbd9"
          data-component="GroupHeadingWrap"
          data-variant="subtle"
        >
          <h3
            class="prc-ActionList-GroupHeading-eahp0"
            data-component="ActionList.GroupHeading"
            id=":r7:"
          >
            Components
          </h3>
        </div>
        <ul
          aria-labelledby=":r7:"
          class="prc-ActionList-GroupList-sj8d3"
        >
          <li
            class="prc-ActionList-ActionListItem-uq6I7"
            data-has-description="false"
          >
            <a
              aria-labelledby=":r8:--label  "
              class="prc-ActionList-ActionListContent-sg9-x prc-Link-Link-85e08"
              data-size="medium"
              href="/Avatar"
              id=":r8:"
              style="--subitem-depth: 0;"
              tabindex="0"
            >
              <span
                class="prc-ActionList-Spacer-dydlX"
              />
              <span
                class="prc-ActionList-ActionListSubContent-lP9xj"
                data-component="ActionList.Item--DividerContainer"
              >
                <span
                  class="prc-ActionList-ItemLabel-TmBhn"
                  id=":r8:--label"
                >
                  Avatar
                </span>
              </span>
            </a>
          </li>
        </ul>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`NavList.Item with NavList.SubNav > does not have active styles if SubNav contains the current item and is open 1`] = `
<div>
  <nav>
    <ul
      class="prc-ActionList-ActionList-X4RiC"
      data-dividers="false"
      data-variant="inset"
    >
      <li
        class="prc-ActionList-ActionListItem-uq6I7"
        data-has-description="false"
        data-has-subitem="true"
      >
        <button
          aria-controls=":r23:"
          aria-expanded="true"
          aria-labelledby=":r22:--label :r22:--trailing-visual "
          class="prc-ActionList-ActionListContent-sg9-x"
          data-size="medium"
          id=":r22:"
          style="--subitem-depth: 0;"
          tabindex="0"
          type="button"
        >
          <span
            class="prc-ActionList-Spacer-dydlX"
          />
          <span
            class="prc-ActionList-ActionListSubContent-lP9xj"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              class="prc-ActionList-ItemLabel-TmBhn"
              id=":r22:--label"
            >
              Item
            </span>
            <span
              class="prc-ActionList-TrailingVisual-XocgV prc-ActionList-VisualWrap-rfjV-"
              id=":r22:--trailing-visual"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-chevron-down prc-ActionList-ExpandIcon-SKUGP"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"
                />
              </svg>
            </span>
          </span>
        </button>
        <ul
          aria-labelledby=":r22:"
          class="prc-ActionList-SubGroup-24eK2"
          id=":r23:"
        >
          <li
            class="prc-ActionList-ActionListItem-uq6I7"
            data-active="true"
            data-has-description="false"
          >
            <a
              aria-current="page"
              aria-labelledby=":r25:--label  "
              class="prc-ActionList-ActionListContent-sg9-x prc-Link-Link-85e08"
              data-size="medium"
              href="#"
              id=":r25:"
              style="--subitem-depth: 1;"
              tabindex="0"
            >
              <span
                class="prc-ActionList-Spacer-dydlX"
              />
              <span
                class="prc-ActionList-ActionListSubContent-lP9xj"
                data-component="ActionList.Item--DividerContainer"
              >
                <span
                  class="prc-ActionList-ItemLabel-TmBhn"
                  id=":r25:--label"
                >
                  Sub Item
                </span>
              </span>
            </a>
          </li>
        </ul>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`NavList.Item with NavList.SubNav > has active styles if SubNav contains the current item and is closed 1`] = `
<div>
  <nav>
    <ul
      class="prc-ActionList-ActionList-X4RiC"
      data-dividers="false"
      data-variant="inset"
    >
      <li
        class="prc-ActionList-ActionListItem-uq6I7"
        data-active="true"
        data-has-description="false"
        data-has-subitem="true"
      >
        <button
          aria-controls=":r1u:"
          aria-expanded="false"
          aria-labelledby=":r1t:--label :r1t:--trailing-visual "
          class="prc-ActionList-ActionListContent-sg9-x"
          data-size="medium"
          id=":r1t:"
          style="--subitem-depth: 0;"
          tabindex="0"
          type="button"
        >
          <span
            class="prc-ActionList-Spacer-dydlX"
          />
          <span
            class="prc-ActionList-ActionListSubContent-lP9xj"
            data-component="ActionList.Item--DividerContainer"
          >
            <span
              class="prc-ActionList-ItemLabel-TmBhn"
              id=":r1t:--label"
            >
              Item
            </span>
            <span
              class="prc-ActionList-TrailingVisual-XocgV prc-ActionList-VisualWrap-rfjV-"
              id=":r1t:--trailing-visual"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-chevron-down prc-ActionList-ExpandIcon-SKUGP"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"
                />
              </svg>
            </span>
          </span>
        </button>
        <ul
          aria-labelledby=":r1t:"
          class="prc-ActionList-SubGroup-24eK2"
          id=":r1u:"
        >
          <li
            class="prc-ActionList-ActionListItem-uq6I7"
            data-active="true"
            data-has-description="false"
          >
            <a
              aria-current="page"
              aria-labelledby=":r20:--label  "
              class="prc-ActionList-ActionListContent-sg9-x prc-Link-Link-85e08"
              data-size="medium"
              href="#"
              id=":r20:"
              style="--subitem-depth: 1;"
              tabindex="0"
            >
              <span
                class="prc-ActionList-Spacer-dydlX"
              />
              <span
                class="prc-ActionList-ActionListSubContent-lP9xj"
                data-component="ActionList.Item--DividerContainer"
              >
                <span
                  class="prc-ActionList-ItemLabel-TmBhn"
                  id=":r20:--label"
                >
                  Sub Item
                </span>
              </span>
            </a>
          </li>
        </ul>
      </li>
    </ul>
  </nav>
</div>
`;
